2002-08-01  Damien Sandras  <dsandras@seconix.com>

	* src/main_window.cpp: Improved main window layout.

	* src/cleaner.cpp: Do not hide until we really exit?

	* src/config.cpp: Show/hides the speaker phone button following
	if we are using Quicknet or not.

	* src/endpoint.cpp: Disables Quicknet support if quicknet device
	can't be opened.

	* src/toolbar.cpp: Do not show the speakerphone button if quicknet 
	is not used.

2002-08-01  Damien Sandras  <dsandras@seconix.com>

	* src/main_window.cpp: Improved main window layout.

2002-08-01  Damien Sandras  <dsandras@seconix.com>

	* src/misc.cpp: Added 2 functions : gnomemeeting_sound_daemons_suspend
	and gnomemeeting_sound_daemons_resume.

	* src/misc.h: See above.

	* src/endpoint.cpp: Make use of the 2 new functions. The old method
	could fail to close ESD when opening the audio channel in fast
	start mode.

	* src/videograbber.cpp: Made the error message more explicit.
	
2002-08-01  Damien Sandras  <dsandras@seconix.com>

	* configure.in: Changed Gettextpackage and program name to 
	gnomemeeting.

	* sounds: Removed GnomeMeeting.soundlist.in and added 
	gnomemeeting.soundlist.in . Changed the "description" from GnomeMeeting
	to gnomemeeting.

	* src/misc.cpp: Changed the "description" from GnomeMeeting to 
	gnomemeeting.
	
2002-07-31  Damien Sandras  <dsandras@seconix.com>

	* Makefile.am: Cleanups and gcc-3.1 fixes.

	* configure.in: Cleanups and gcc-3.1 fixes.

	* src/Makefile.am: Cleanups and gcc-3.1 fixes.

	* src/druid.cpp: Cleanups and gcc-3.1 fixes.

	* src/ils.h: Cleanups and gcc-3.1 fixes.

	* src/ldap_window.h: Cleanups and gcc-3.1 fixes.
	

2002-07-30  Damien Sandras  <dsandras@seconix.com>

	Coding again, yes!
	* configure.in: Changed things to speed up checks with GCC 3.1. 
	Incremented version number and SCHEMA_AGE.

	* gnomemeeting.schemas.in.in: Added video_image gconf key to add
	the possibility to transmit a given picture (or the logo) to the remote