@@ -1,3 +1,9 @@
+2002-08-02  Damien Sandras  <dsandras@seconix.com>
+
+	* lib/dialog.c: Fixed bug. gtk_dialog_run didn't work in threads.
+
+	* src/endpoint.cpp: Removed unuseful comments.
+	
 2002-08-01  Damien Sandras  <dsandras@seconix.com>
 
 	* src/main_window.cpp: Improved main window layout.
